--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ nav h3:hover , footer h3:hover{
 	  width: 100%;
       height: 100%;
    /*  background: #e7e7e7;*/
-  background: #fafafa;
+  background: #141414;
 	z-index: 0;
 }
 
@@ -765,10 +765,10 @@ li {
 
 
 #follower{
-  z-index: 3;
+  z-index: 4;
   position: absolute;
-  width:50px;
-  height:50px;
+  width:80px;
+  height:80px;
   border-radius:50px;
   border:1px solid black;
   opacity: 0.4;
@@ -859,7 +859,7 @@ svg .animated-circle {
     box-sizing: border-box;
  }
 .case-main .case {
-    	background-color: #fafafa;
+    	background-color: #141414;
 
 }
 
@@ -901,7 +901,7 @@ header {
     top: 0;
     transition: top 0.6s cubic-bezier(.72,.16,.345,.875) !important;
     width: 100%;
-	background-color: #fafafa;
+	background-color: #141414;
  }
 
 .description-begin{
