--- a/css/style.css
+++ b/css/style.css
@@ -153,8 +153,10 @@ nav h3:hover , footer h3:hover{
 }
 
 .case-main {
+	  overflow: hidden;
+
 	  width: 100%;
-      height: 100%;
+      height: 100vh;
    /*  background: #e7e7e7;*/
   background: #141414;
 	z-index: 0;
