--- a/css/style.css
+++ b/css/style.css
@@ -904,7 +904,7 @@ header {
     top: 0;
     transition: top 0.6s cubic-bezier(.72,.16,.345,.875) !important;
     width: 100%;
-	background-color: #141414;
+	background: rgb(13,13,13);
  }
 
 .description-begin{
