--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,6 @@ nav h3:hover , footer h3:hover{
 
 .case-main {
 	  overflow: hidden;
-
 	  width: 100%;
       height: 100vh;
    /*  background: #e7e7e7;*/
@@ -862,7 +861,7 @@ svg .animated-circle {
     box-sizing: border-box;
  }
 .case-main .case {
-    	background-color: #141414;
+    	background-color: #f1f1f1;
 
 }
 
@@ -904,7 +903,7 @@ header {
     top: 0;
     transition: top 0.6s cubic-bezier(.72,.16,.345,.875) !important;
     width: 100%;
-	background: rgb(13,13,13);
+	background: #f1f1f1;
  }
 
 .description-begin{
