--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html, body {
 
 
 nav{
-	z-index: 2;
+	z-index: 4;
 	width: 85%;
 	height: 80px;
 	position: absolute;
@@ -769,78 +769,37 @@ li {
 #follower{
   z-index: 4;
   position: absolute;
-  width:80px;
-  height:80px;
-  border-radius:50px;
-  border:1px solid black;
-  opacity: 0.4;
+  width:10px;
+  height:10px;
   pointer-events: none;
-  -webkit-transition:transform 0.5s cubic-bezier(.31,.99,.57,1);
+  border-radius:50px;
+  background-color: #1e1e1e;
+  opacity: 1;
+  -webkit-transition:transform 0.5s cubic-bezier(.31,.99,.57,1), opacity 0.5s cubic-bezier(.31,.99,.57,1);
+ 
 }
 
 .whitemouse{
-	  border:1px solid white !important;
-	  opacity: 0.8 !important;
-}
+    background-color: #f1f1f1 !important;
+    opacity: 1;
+ }
 
-
-.progress-indicator {
-	z-index: 5;
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    width: 100px;
-    height: 100px;
-}
-.progress-count {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    line-height: 100px;
-    color: #0082FF;
-}
- 
-svg {
-    position: absolute;
-}
-circle {
-    fill: rgba(255,255,255,0.9);
-}
- 
-svg .animated-circle {
-    fill: transparent;
-    stroke-width: 40px;
-    stroke: #0A74DA;
-    stroke-dasharray: 126;
-    stroke-dashoffset: 126;
-}
-
-.progress-indicator-2 {
-	z-index: 5;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 3px;
-    background-color: #0A74DA;
-}
-
-
-
+  
 #pointer{
-  z-index: 1;
-  position : relative;
-  width:4px;
-  height:4px;
+  z-index: 4;
+  position : absolute;
+  width:8px;
+  height:8px;
   border-radius:50px;
   background-color: #1e1e1e;
   opacity: 0;
 }
 
 #follower.scale{
-  transform: scale(1.1);
+    opacity: 0.3;
+    transform: scale(5);
+    -webkit-transition:transform 0.5s cubic-bezier(.31,.99,.57,1), opacity 0.5s cubic-bezier(.31,.99,.57,1);
+
 }
 
 #follower.is-moving {
